# gl_geogebra_aws

./: .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat  download_glad.bat  run.bat  setup.bat  setup_and_build.bat  setup_dependencies.bat  setup_glad.ps1  setup_glad.py
include/: Application.h  Axes.h  Camera.h  FitsLoader.h  GeometryObject.h  Grid.h  ImageLoader.h  InputHandler.h  Renderer.h  Shader.h  Window.h
include/Geometry/: Cube.h  Line.h  Plane.h  Point.h  PointCloud.h  Sphere.h
include/Math/: Matrix4.h  Vector3.h
include/UI/: FileBrowser.h  LabelDataBrowser.h  PropertiesPanel.h  Sidebar.h  Toolbar.h  UIManager.h
src/: Application.cpp  Axes.cpp  Camera.cpp  FitsLoader.cpp  GeometryObject.cpp  Grid.cpp  ImageLoader.cpp  InputHandler.cpp  Renderer.cpp  Shader.cpp  Window.cpp  main.cpp
src/Geometry/: Cube.cpp  Line.cpp  Plane.cpp  Point.cpp  PointCloud.cpp  Sphere.cpp
src/Math/: Matrix4.cpp  Vector3.cpp
src/UI/: FileBrowser.cpp  LabelDataBrowser.cpp  PropertiesPanel.cpp  Sidebar.cpp  Toolbar.cpp  UIManager.cpp
